CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- Added several "hint" messages for common configuration
	  problems that are stored in the error_log file.
	- httpSeparate() now unquotes %xx characters in the
	  username:password field of a URI.
	- When starting the scheduler in daemon mode, the parent
	  process now waits for the child to signal it is ready
	  to accept connections.
	- Added -F option to cupsd to run cupsd in the
	  foreground but detach from the controlling terminal
	  and current directory.
	- The scheduler did not reload jobs when receiving a HUP
	  signal; this would cause problems since the pointers
	  into the file type database would no longer be valid
	  for existing jobs.
	- The scheduler did not save the network interface list
	  update time, thus no caching of the network data was
	  actually provided.
	- Updated the SuSE PAM configuration file.
	- The LPD backend now supports a "reserve" option and no
	  longer reserves a priviledged port by default.
	- The cupsaddsmb command now continues past printers
	  that do not have a PPD file to export.
	- The lpstat command didn't treat printer names as
	  case-insensitive.
	- The lpstat command now reports the printer location
	  attribute with "lpstat -l -p".
	- Fixed a bug in the vsnprintf() emulation function,
	  which was used on old versions of HP-UX, IRIX, and
	  Solaris.
	- The number-up option was incorrectly being used when
	  printing banner pages.
	- Added support for Greek and Slovak PPD files.
	- CUPS now supports printer names containing any
	  printable character, e.g. "123-abc", "foo-bar", etc.
	- The null filter was not supported in mime.convs due to
	  a bug in the filter validation code.
	- Changes in the default printer and printer attributes
	  were not always reflected in the generated printcap
	  file.
	- Implicit classes did not inherit the location or
	  description from member printers.
	- The httpGetHostByName() function did not handle