@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.18 2002/07/18 15:40:28 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.19 2002/07/23 21:20:27 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -497,7 +497,7 @@ accept_jobs(client_t        *con,	/* I - Client connection */
   * Accept jobs sent to the printer...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     printer = FindClass(name);
   else
     printer = FindPrinter(name);
@@ -505,7 +505,7 @@ accept_jobs(client_t        *con,	/* I - Client connection */
   printer->accepting        = 1;
   printer->state_message[0] = '\0';
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     SaveAllClasses();
   else
     SaveAllPrinters();
@@ -783,7 +783,7 @@ add_class(client_t        *con,		/* I - Client connection */
       * Add it to the class...
       */
 
-      if (dtype == CUPS_PRINTER_CLASS)
+      if (dtype & CUPS_PRINTER_CLASS)
         AddPrinterToClass(pclass, FindClass(dest));
       else
         AddPrinterToClass(pclass, FindPrinter(dest));
@@ -2084,7 +2084,7 @@ create_job(client_t        *con,	/* I - Client connection */
   * See if the printer is accepting jobs...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
   {
     printer = FindClass(dest);
 
@@ -2819,7 +2819,7 @@ delete_printer(client_t        *con,	/* I - Client connection */
   * Find the printer or class and delete it...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     printer = FindClass(dest);
   else
     printer = FindPrinter(dest);
@@ -2840,7 +2840,7 @@ delete_printer(client_t        *con,	/* I - Client connection */
   snprintf(filename, sizeof(filename), "%s/ppd/%s.ppd", ServerRoot, dest);
   unlink(filename);
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
   {
     LogMessage(L_INFO, "Class \'%s\' deleted by \'%s\'.", dest,
                con->username);
@@ -3287,7 +3287,7 @@ get_printer_attrs(client_t        *con,	/* I - Client connection */
     return;
   }
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     printer = FindClass(dest);
   else
     printer = FindPrinter(dest);
@@ -3967,7 +3967,7 @@ print_job(client_t        *con,		/* I - Client connection */
   * See if the printer is accepting jobs...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
   {
     printer = FindClass(dest);
 #ifdef AF_INET6
@@ -4405,7 +4405,7 @@ reject_jobs(client_t        *con,	/* I - Client connection */
   * Reject jobs sent to the printer...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     printer = FindClass(name);
   else
     printer = FindPrinter(name);
@@ -4419,17 +4419,20 @@ reject_jobs(client_t        *con,	/* I - Client connection */
     strlcpy(printer->state_message, attr->values[0].string.text,
             sizeof(printer->state_message));
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
+  {
     SaveAllClasses();
-  else
-    SaveAllPrinters();
 
-  if (dtype == CUPS_PRINTER_CLASS)
     LogMessage(L_INFO, "Class \'%s\' rejecting jobs (\'%s\').", name,
                con->username);
+  }
   else
+  {
+    SaveAllPrinters();
+
     LogMessage(L_INFO, "Printer \'%s\' rejecting jobs (\'%s\').", name,
                con->username);
+  }
 
  /*
   * Everything was ok, so return OK status...
@@ -5156,7 +5159,7 @@ set_default(client_t        *con,	/* I - Client connection */
   * Set it as the default...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     DefaultPrinter = FindClass(name);
   else
     DefaultPrinter = FindPrinter(name);
@@ -5463,7 +5466,7 @@ start_printer(client_t        *con,	/* I - Client connection */
   * Start the printer...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     printer = FindClass(name);
   else
     printer = FindPrinter(name);
@@ -5472,17 +5475,20 @@ start_printer(client_t        *con,	/* I - Client connection */
 
   printer->state_message[0] = '\0';
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
+  {
     SaveAllClasses();
-  else
-    SaveAllPrinters();
 
-  if (dtype == CUPS_PRINTER_CLASS)
     LogMessage(L_INFO, "Class \'%s\' started by \'%s\'.", name,
                con->username);
+  }
   else
+  {
+    SaveAllPrinters();
+
     LogMessage(L_INFO, "Printer \'%s\' started by \'%s\'.", name,
                con->username);
+  }
 
   CheckJobs();
 
@@ -5553,7 +5559,7 @@ stop_printer(client_t        *con,	/* I - Client connection */
   * Stop the printer...
   */
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
     printer = FindClass(name);
   else
     printer = FindPrinter(name);
@@ -5569,17 +5575,20 @@ stop_printer(client_t        *con,	/* I - Client connection */
             sizeof(printer->state_message));
   }
 
-  if (dtype == CUPS_PRINTER_CLASS)
+  if (dtype & CUPS_PRINTER_CLASS)
+  {
     SaveAllClasses();
-  else
-    SaveAllPrinters();
 
-  if (dtype == CUPS_PRINTER_CLASS)
     LogMessage(L_INFO, "Class \'%s\' stopped by \'%s\'.", name,
                con->username);
+  }
   else
+  {
+    SaveAllPrinters();
+
     LogMessage(L_INFO, "Printer \'%s\' stopped by \'%s\'.", name,
                con->username);
+  }
 
  /*
   * Everything was ok, so return OK status...
@@ -5796,5 +5805,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.18 2002/07/18 15:40:28 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.19 2002/07/23 21:20:27 mike Exp $".
  */
